--- a/nginx-static/nginx-static-ingress.yaml
+++ b/nginx-static/nginx-static-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: nginx.local
+  - host: nginx.kassaev.local
     http:
       paths:
       - path: /
